--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,10 +1,27 @@
 .App {
+  z-index: 2;
   text-align: center;
+  width: 300px;
+  height: 400px;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+#chat {
+  z-index:2;
+  text-align: center;
+  width: 300px;
+  height: 400px;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  border: 1px solid black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,7 +32,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
